# cough-vision

./: .gitignore  AGENTS.md  CLAUDE.md  DATASETS.md  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
notebooks/: train_kaggle.ipynb
plan/: README.md
plans/: audit-report-deep-dive.md
scripts/: deploy.py  evaluate.py  train.py
src/: __init__.py  config.py
src/data/: __init__.py  augmentation.py  dataset.py  preprocessing.py
src/deployment/: export.py  inference.py
src/evaluation/: calibration.py  metrics.py
src/models/: __init__.py  heads.py  interpretability.py  segmentation.py
src/models/backbones/: cnn.py  fusion.py  vit.py
src/training/: __init__.py  finetune.py  losses.py  pretrain.py  scheduler.py
tests/: test_evaluation.py  test_models_smoke.py  test_preprocessing.py
