[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
# conftest.py inserts src/ on sys.path, so no pythonpath config needed here

[tool.black]
line-length    = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile         = "black"
line_length     = 100
known_first_party = ["config", "data", "models", "training", "evaluation", "deployment"]

[tool.mypy]
python_version         = "3.10"
ignore_missing_imports = true
warn_unused_ignores    = false   # many type:ignore comments for uninstalled deps
strict                 = false

[tool.flake8]
max-line-length = 100
extend-ignore   = ["E203", "W503"]
exclude         = [".git", "__pycache__", ".venv", "build", "dist"]
